codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问 题  2/2（ 2 个 未 回 答 ）                                                                                                 
  Share details.                                                                                                        
                                                                                                                        
  › 输 入 答 案 （ 可 选 ）                                                                                                     
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter 全 部 提 交  | Ctrl + p / Ctrl + n 切 换 问 题  | Esc 以 中 断                   
